# Bee8080

./: CMakeLists.txt  LEGAL.md  README.md  bee8080-tests.cpp  bee8080.cpp  bee8080.h  msys_dist.sh
Bee8080/: CMakeLists.txt  bee8080.cpp  bee8080.h
tests/: TEST.ASM  TEST.COM
tools/: msys_dist.sh
